fixing a white space issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
+h1,h2,h3,body,ul,li { margin: 0; padding: 0 }
 body {
   font-family: Verdana, Geneva, sans-serif;
   background: #e8e8e8;
-  margin:0;
-  padding:0;
   margin-top: 19px;
   width: 100%;
   height: 100%;
@@ -20,7 +19,6 @@ b {
 }
 h1,h2,h3 {
   font-weight: 300;
-  margin: 0;
 }
 h1 {
   margin-top: 0.25em;
